--- a/introduction.tex
+++ b/introduction.tex
@@ -8,7 +8,7 @@ Education also poses an even larger challenge than other RL tasks. In convention
 
 Prof. Emma Brunskill's group, in which I interned for the summer, lies its interest in RL and education. We have shown that these two areas are intrinstically related. Our group covers a wide spectrum of research areas, from RL theories (machine learning) and traditional AI, all the way to more application oriented tracks like data mining and human computer interaction (in education). Given the special, yet not unique challenge of education described previously, our research projects are mostly focused on offline policy evaluation or planning. Educational data mining, which focuses on data collected from intelligent tutoring systems, is one of the may side interests of our group. Several distinctive characteristics of EDM include dealing with sequential data, and a special focus on discovering the latent hierarchical structure of data items (i.e. prerequisite structure of knowledge components). Deep learning, while has been widely adopted in various areas like computer vision, is still an emerging methods in RL and EDM, where only only a handful of previous works could be found. It is also a new area for the group.
 
-In this section, we have briefly described the backgrounds and motivations of the projects. The following sections are organised as: section \ref{sec:DKT} described a deep learning model which my work in all 3 projects are based on; section \ref{sec:deepRL}, section \ref{sec:fraction} and section \ref{sec:influence} discusses the big pictures of the three projects, where we are and what part I play in them. At last, section \ref{sec:life} jots down some other aspects of the internship basides work, and section \ref{sec:summary} summarizes the 10-week internship.
+In this section, we have briefly described the backgrounds and motivations of the projects. The following sections are organised as: section \ref{sec:DKT} described a deep learning model which my work in all 3 projects are based on; section \ref{sec:deepRL}, section \ref{sec:fraction} and section \ref{sec:influence} discusses the big pictures of the three projects, where we are and what part I play in them. At last, section \ref{sec:summary} jots down some other aspects of the internship basides work, and summarizes the 10-week internship.
 
 
 
